# GAMES101

./: CMakeLists.txt  README.md
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/models/rick/: Rick.mtl
Assignment4/: CMakeLists.txt  main.cpp
Assignment5/: CMakeLists.txt  Object.hpp  Renderer.cpp  Scene.hpp  Triangle.hpp  binary.ppm  main.cpp
test/: CMakeLists.txt  test.cpp  坑.txt
